<resources>
    <string name="app_name" translatable="false">BilStudy</string>
    <string name="welcome_message">Welcome, %1$s.</string>
    <string name="leitner_card_name" translatable="false">Leitner</string>
    <string name="notepad_card_name">Notepad</string>
    <string name="pomodoro_card_name" translatable="false">Pomodoro</string>
    <string name="shop_button_name">Shop</string>
    <string name="notifications_button_name">Notifications</string>
    <string name="settings_button_name">Settings</string>
    <string name="questionnaire_button_name">Questionnaire</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="filter">Filter</string>
    <string name="name">Name:</string>
    <string name="tags">Tags:</string>
    <string name="hide_solved">Hide Solved</string>
    <string name="show">Show:</string>
    <string name="enter_name">Enter name here…</string>
    <string name="boxes">Boxes</string>
    <string name="folders">Folders</string>
    <string name="all">All</string>
    <string name="add_tag">Add Tag</string>
    <string name="ok">OK</string>
    <string name="icon">Icon</string>

    <string name="n_solved">%d Solved</string>
    <string name="n_questions">%d Questions</string>
    <string name="weekly">Weekly</string>
    <string name="thridaily">Thridaily</string>
    <string name="daily">Daily</string>
    <string name="status">Status</string>
    <string name="n_boxes">%d Boxes</string>
    <string name="n_folders">%d Folders</string>
    <string name="folder">Folder</string>
    <string name="question_n">Question %d</string>
    <string name="check_answer">Check Answer</string>
    <string name="answer_hint">Type your answer here…</string>
    <string name="add_question">Add Question</string>
    <string name="text_answer">Text Answer</string>
    <string name="multiple_choice_single">Multiple Choice (Single)</string>
    <string name="add_choice">Add Choice</string>
    <string name="save">Save</string>
    <string name="question_hint">Type your question here…</string>
    <string name="add_container">Add Container</string>
    <string name="box">Box</string>
    <string name="new_box">New Box</string>
    <string name="new_folder">New Folder</string>
    <string name="edit">Edit</string>
    <string name="enter_text">Enter Text</string>
    <string name="type_hint">Type here...</string>


</resources>



