<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:padding="12dp"
    android:theme="@style/Theme.BilStudy.Leitner"
    tools:context=".LeitnerHomeActivity">

    <TextView
        android:id="@+id/lnAddQuestionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="?attr/colorOnPrimary"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingTop="4dp"
        android:paddingEnd="10dp"
        android:paddingBottom="4dp"
        android:text="@string/leitner_card_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lnAddQuestionTextDisplay"
        android:layout_width="0dp"
        android:layout_height="233dp"
        android:layout_marginTop="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnAddQuestionText">

        <TextView
            android:id="@+id/lnAddQuestionTextNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/question_n"
            android:textAppearance="?android:attr/textAppearance"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/lnAddQuestionTextCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="#A4C7FB"
            android:backgroundTint="#A4C7FB"
            app:cardBackgroundColor="#A4C7FB"
            app:cardCornerRadius="12dp"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lnAddQuestionTextNumber">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#A4C7FB">

                <EditText
                    android:id="@+id/lnAddQuestionTextQuestion"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/question_hint"
                    android:inputType="textMultiLine"
                    android:importantForAutofill="no"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/lnAddQuestionTextAnswer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:gravity="start|top"
        android:hint="@string/answer_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="12dp"
        android:textAppearance="?android:attr/textAppearance"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/lnAddQuestionTextSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnAddQuestionTextDisplay" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/lnAddQuestionTextDelete"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="23dp"
        android:contentDescription="@string/delete"
        android:foreground="@android:drawable/ic_menu_delete"
        android:foregroundGravity="center"
        app:backgroundTint="?attr/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/lnAddQuestionTextSave"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginBottom="23dp"
        android:contentDescription="@string/save"
        android:foreground="@android:drawable/ic_menu_save"
        android:foregroundGravity="center"
        app:backgroundTint="?attr/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>