<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    tools:context=".LeitnerBoxActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        app:cardBackgroundColor="?android:attr/background"
        app:cardCornerRadius="?attr/cornerRadius"
        app:cardElevation="4dp"
        app:contentPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null">

            <Button
                android:id="@+id/lnContainerAddClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@android:color/white"
                android:contentDescription="@string/add_tag"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp"
                app:backgroundTint="@color/white"
                app:icon="@drawable/close_icon"
                app:iconPadding="0dp"
                app:iconTint="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:orientation="vertical"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/lnContainerAddTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:background="@null"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/add_container"
                    android:textAppearance="?android:attr/textAppearance"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/lnContainerAddBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/rounded_corner"
                    android:fontFamily="sans-serif-medium"
                    android:minWidth="240dp"
                    android:text="@string/box"
                    android:textAppearance="?android:attr/textAppearance"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/lnContainerAddFolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/rounded_corner"
                    android:fontFamily="sans-serif-medium"
                    android:minWidth="240dp"
                    android:text="@string/folder"
                    android:textAppearance="?android:attr/textAppearance"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>